# nemo-guardrails-examples

./: .gitignore  Makefile  main.py  pyproject.toml  setup.sh
notebooks/: config.yml  test.ipynb
src/examples/competitor-blocking/config/: config.yml
src/examples/competitor-blocking/config/rails/: rails.co
src/examples/custom-ml/: demo.py
src/examples/custom-ml/config/: actions.py  config.yml
src/examples/custom-ml/config/rails/: rails.co
src/examples/custom-ml/data/: test_data.csv
src/examples/custom-ml/scripts/: generate_data.py  train.py
src/examples/input-checking/: demo.py
src/examples/input-checking/config/: config.yml
src/examples/multimodal/: demo.py  demo_base64encoded.py  demo_base64encoded_optimized.py
src/examples/tracing/: README.md  demo.py
src/examples/tracing/config/: config.yaml  config.yml  prompts.yml
src/examples/tracing/config/rails/: rails_01.co
traces/: traces.jsonl
