[project]
name = "nemo-examples"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "nemoguardrails[all]>=0.9.0",
    "pip>=25.1.1",
    "scikit-learn>=1.3.0",
    "pandas>=2.2.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
tabular-tests = [
    "fairlearn>=0.12.0",
]

