[project]
name = "nemo-examples"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "nemoguardrails[all]>=0.9.0",
    "pip>=25.1.1",
    "scikit-learn>=1.3.0",
    "pandas>=2.2.0",
    "fairlearn>=0.12.0",
    "pybase64>=1.4.1",
    "python-io>=0.3",
    "requests>=2.32.3",
    "urllib3>=2.4.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
jailbreak-heuristic = [
    "torch>=2.7.1",
    "transformers>=4.52.4",
]
tabular-tests = [
    "fairlearn>=0.12.0",
]
tracing = [
    "opentelemetry-exporter-zipkin>=1.34.1",
]

